--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,9 @@
 
 	<path id="class.path">
 		<pathelement path="gson-2.6.2.jar"/>
+		<pathelement path="jackson-core-2.8.8.jar"/>
+		<pathelement path="jackson-annotations-2.8.8.jar"/>
+		<pathelement path="jackson-databind-2.8.8.1.jar"/>
 		<pathelement path="jsoniter-0.9.12.jar"/>
 	</path>
 
